# S201

Prova1/: Q1&2.txt  Q3.lua
Prova1/Questao4/: CMakeLists.txt
Prova1/Questao4/src/: main.cpp
Prova1/Questao4/src/headers/: animalcorrida.h  cavalo.h
Prova1/Questao4/src/sources/: cavalo.cpp
